fixed the spacing and formatting to match the instructions

--- a/Pokedex/src/App.css
+++ b/Pokedex/src/App.css
@@ -1,4 +1,3 @@
-/* General styling */
 body {
   margin: 0;
   padding: 0;
@@ -14,6 +13,8 @@ h1 {
   text-align: center;
   width: 100%;
   color: black;
+  margin-bottom: 20px;
+  font-size: 30px !important;
 }
 
 img {
@@ -51,7 +52,6 @@ p {
 }
 
 .arrowBtns {
-  
   width: 75px;
   background-color: #f0f0f0;
   display: flex;
@@ -71,12 +71,22 @@ p {
 
 .pokeDex {
   display: flex;
-  justify-content: space-between;
-  width: 90%;
-  max-width: 1000px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   border: 1px solid black;
+  padding: 50px;
+  margin: auto;
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
   padding: 20px;
   box-sizing: border-box;
+  margin: auto;
 }
 
 .infos {
@@ -111,7 +121,7 @@ ul {
   color: black;
   width: 75px;
   height: 35px;
-  margin: 0 20px;
+  margin: 0 25px;
   background-color: #f0f0f0;
   border-radius: 5px;
   cursor: pointer;
